[package]
name = "hello_world"
version = "0.1.0"
authors = ["xuliya"]
edition = "2018"
license = "MIT"
description = "Test publish create"
homepage = "https://github.com/liya2017/hello_world"
repository = "https://github.com/liya2017/hello_world"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
time = "0.1.12"
regex = "0.1.41"
